// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bn az bo b1 b2 b3 b4 bp bq br bs be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bt az bo b1 b2 b3 b4 bu bv bw bx b9 ba bb bc bd"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Larger
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 be bf bg bh bi"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Poster 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b3 b1 c5 c6 c3 c7 c4 c8"
        src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
      />
      <div
        className="c9 ca cb cc"
      >
        <h1
          className="ax bt az bo cd at au av ce cf cg ch ci cj ck cl cm cn"
        >
          July 26
        </h1>
        <div
          className="co cp ax cq cr cs"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Thumbnail 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b3 b1 c5 c6 c3 ct c4 cu"
        src="https://image.tmdb.org/t/p/w300/aQLygZOIKai6aaiBAeeKpIWO5nc.jpg"
      />
      <div
        className="c9 ca cb cc"
      >
        <div
          className="co cp ax cq cr cs"
        >
          <div
            className="co cv ax cq cr cs"
          >
            <div
              className="cd cc"
              data-baseweb="block"
            >
              Once Upon a Time in Hollywood
            </div>
            <div
              className=""
              data-baseweb="block"
            >
              <svg
                className="cw cx cy cz d0"
                data-baseweb="icon"
                viewBox="0 0 20 20"
              >
                <title>
                  Show
                </title>
                <path
                  d="M.2 10a11 11 0 0119.6 0A11 11 0 01.2 10zm9.8 4a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
               7.5k
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Credit Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="b5 b6 cf ch d1"
    >
      <div
        className="d2 d3 d4"
      >
        <div
          aria-label={null}
          className="d5 d6 d7 d8 d9 cw"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Joaquin Phoenix"
            className="d5 d6 d7 d8 d9 da db dc dd"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/zixTWuMZ1D8EopgOhLVZ6Js2ux3.jpg"
          />
        </div>
      </div>
      <div
        className="de d3 df dg"
      >
        <div
          className="cd ax cr bn bo"
          data-baseweb="typo-p1"
        >
          Joaquin Phoenix
        </div>
        <div
          className="cv ax az cq cs"
          data-baseweb="typo-label3"
        >
          Arthur Fleck / Joker
        </div>
      </div>
    </div>
    <div
      className="b5 b6 cf ch d1"
    >
      <div
        className="d2 d3 d4"
      >
        <div
          aria-label={null}
          className="d5 d6 d7 d8 d9 cw"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Robert De Niro"
            className="d5 d6 d7 d8 d9 da db dc dd"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/8Bgdfv1oN9Mw0YuMHP6fw8KzDkc.jpg"
          />
        </div>
      </div>
      <div
        className="de d3 df dg"
      >
        <div
          className="cd ax cr bn bo"
          data-baseweb="typo-p1"
        >
          Robert De Niro
        </div>
        <div
          className="cv ax az cq cs"
          data-baseweb="typo-label3"
        >
          Murray Franklin
        </div>
      </div>
    </div>
    <div
      className="b5 b6 cf ch d1"
    >
      <div
        className="d2 d3 d4"
      >
        <div
          aria-label={null}
          className="d5 d6 d7 d8 d9 cw"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Zazie Beetz"
            className="d5 d6 d7 d8 d9 da db dc dd"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/sgxzT54GnvgeMnOZgpQQx9csAdd.jpg"
          />
        </div>
      </div>
      <div
        className="de d3 df dg"
      >
        <div
          className="cd ax cr bn bo"
          data-baseweb="typo-p1"
        >
          Zazie Beetz
        </div>
        <div
          className="cv ax az cq cs"
          data-baseweb="typo-label3"
        >
          Sophie Dumond
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Deck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="dh di dj"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ul
        className="dk dl dm dh dn d1 do dp dq dr ds"
      >
        <li
          className="dt d9"
        >
          <div
            className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c5 c6 c3 c7 c4 c8"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c9 ca cb cc"
            >
              <h1
                className="ax bt az bo cd at au av ce cf cg ch ci cj ck cl cm cn"
              >
                July 26
              </h1>
              <div
                className="co cp ax cq cr cs"
              />
            </div>
          </div>
        </li>
        <li
          className="dt d9"
        >
          <div
            className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c5 c6 c3 c7 c4 c8"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c9 ca cb cc"
            >
              <h1
                className="ax bt az bo cd at au av ce cf cg ch ci cj ck cl cm cn"
              >
                July 26
              </h1>
              <div
                className="co cp ax cq cr cs"
              />
            </div>
          </div>
        </li>
        <li
          className="dt d9"
        >
          <div
            className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c5 c6 c3 c7 c4 c8"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c9 ca cb cc"
            >
              <h1
                className="ax bt az bo cd at au av ce cf cg ch ci cj ck cl cm cn"
              >
                July 26
              </h1>
              <div
                className="co cp ax cq cr cs"
              />
            </div>
          </div>
        </li>
        <li
          className="dt d9"
        >
          <div
            className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c5 c6 c3 c7 c4 c8"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c9 ca cb cc"
            >
              <h1
                className="ax bt az bo cd at au av ce cf cg ch ci cj ck cl cm cn"
              >
                July 26
              </h1>
              <div
                className="co cp ax cq cr cs"
              />
            </div>
          </div>
        </li>
        <li
          className="dt d9"
        >
          <div
            className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c5 c6 c3 c7 c4 c8"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c9 ca cb cc"
            >
              <h1
                className="ax bt az bo cd at au av ce cf cg ch ci cj ck cl cm cn"
              >
                July 26
              </h1>
              <div
                className="co cp ax cq cr cs"
              />
            </div>
          </div>
        </li>
        <li
          className="dt d9"
        >
          <div
            className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c5 c6 c3 c7 c4 c8"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c9 ca cb cc"
            >
              <h1
                className="ax bt az bo cd at au av ce cf cg ch ci cj ck cl cm cn"
              >
                July 26
              </h1>
              <div
                className="co cp ax cq cr cs"
              />
            </div>
          </div>
        </li>
        <li
          className="dt d9"
        >
          <div
            className="by bz c0 c1 b3 b1 b4 b2 c2 ap c3 c4"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b3 b1 c5 c6 c3 c7 c4 c8"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="c9 ca cb cc"
            >
              <h1
                className="ax bt az bo cd at au av ce cf cg ch ci cj ck cl cm cn"
              >
                July 26
              </h1>
              <div
                className="co cp ax cq cr cs"
              />
            </div>
          </div>
        </li>
      </ul>
      <button
        className="du dv dw ap dx dy dz e0 bn e1 e2 e3 e4 e5"
        onClick={[Function]}
      >
        &lt;
      </button>
      <button
        className="du dv dw ap dx dy dz e0 bn e1 e2 e3 e4 e6"
        onClick={[Function]}
      >
        &gt;
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Layout Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="e7 e8 e9 ea eb"
    >
      <p
        className="ax ay cr b0 ec ed ee ef eg"
      >
        Inside content
      </p>
      <div
        className="d1 eh dh e7 ei ej"
      >
        <div
          className="de ek el"
        >
          <h2
            className="ax bt az bo em en ce ed eo ep eq er es"
          >
            Section 1
          </h2>
        </div>
        <div
          className="et ek eu"
        >
          <div
            className="ev"
          >
            <p
              className="ax ay cr b0 ec ed ee ef eg"
            >
              Inside section 1
            </p>
          </div>
        </div>
      </div>
      <div
        className="d1 eh dh e7 ei ej"
      >
        <div
          className="de ek el"
        >
          <h2
            className="ax bt az bo em en ce ed eo ep eq er es"
          >
            Section 2
          </h2>
        </div>
        <div
          className="et ek eu"
        >
          <div
            className="ev"
          >
            <p
              className="ax ay cr b0 ec ed ee ef eg"
            >
              Inside section 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 bj bk bl bm"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Navigation Base 1`] = `
Array [
  <div
    className=""
  >
    <nav
      className="ax ay cr b0 d1 bq bp ew ex ey dv e5 e6 ez f0 f1 f2 f3"
      data-baseweb="header-navigation"
      role="navigation"
    >
      <ul
        className="d1 f4 f5 f6 e8 e9 f7 f8 f9 aw au at av"
      >
        <li
          className="fa e8"
        >
          <h1
            className="fb fc"
            data-baseweb="block"
          >
            Next Movie
          </h1>
        </li>
      </ul>
      <ul
        className="d1 f4 f5 fd e8 e9 fe ag f9 aw au at av"
      />
      <ul
        className="d1 f4 f5 f6 e8 e9 ff fg f9 aw au at av"
      >
        <div
          className="e4 fh fi fj"
          data-baseweb="block"
        >
          <div
            className="ax cq cr cs b9 d1 dh"
            data-baseweb="input"
          >
            <div
              className="d9 d1 dh fk bz fl an ao b3 b4 b1 b2 ax cq cr cs b9 fm bj"
              data-baseweb="base-input"
            >
              <div
                className="d1 af b7"
              >
                <svg
                  className="cw fn fo fp fq"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Search
                  </title>
                  <path
                    clipRule="evenodd"
                    d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <input
                aria-describedby={null}
                aria-invalid={false}
                aria-label={null}
                aria-labelledby={null}
                aria-required={false}
                autoComplete="on"
                className="d9 ba ah ai ak dh c6 fr fb b5 b6 fs ft ax cq cr cs b9 fu fv"
                disabled={false}
                inputMode="text"
                name=""
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                pattern={null}
                placeholder="Search a movie by title"
                required={false}
                rows={null}
                type="text"
              />
            </div>
          </div>
        </div>
        <li
          className="fa e8"
        >
          <button
            className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 be bf bg bh bi"
            data-baseweb="button"
            disabled={false}
            onClick={[Function]}
          >
            Sign In
          </button>
        </li>
        <li
          className="fa e8"
        />
      </ul>
    </nav>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots PaginatedItems Base 1`] = `
Array [
  <div
    className=""
  >
    <div>
      <div
        className="by bz fw ba fx fy fz g0 d1 eh dn g1 ca"
      >
        <div
          className="dh g2 g3 fd"
          role="rowgroup"
        >
          <div
            className="d1 af"
            role="row"
          >
            <div
              className="ax cq cr cs fc d1 fd cg ch ci cf"
            >
              <div
                className="b5 b6 cf ch d1"
              >
                <div
                  className="d2 d3 d4"
                >
                  <div
                    aria-label={null}
                    className="d5 d6 d7 d8 d9 cw"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Joaquin Phoenix"
                      className="d5 d6 d7 d8 d9 da db dc dd"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/zixTWuMZ1D8EopgOhLVZ6Js2ux3.jpg"
                    />
                  </div>
                </div>
                <div
                  className="de d3 df dg"
                >
                  <div
                    className="cd ax cr bn bo"
                    data-baseweb="typo-p1"
                  >
                    Joaquin Phoenix
                  </div>
                  <div
                    className="cv ax az cq cs"
                    data-baseweb="typo-label3"
                  >
                    Arthur Fleck / Joker
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="d1 af"
            role="row"
          >
            <div
              className="ax cq cr cs fc d1 fd cg ch ci cf"
            >
              <div
                className="b5 b6 cf ch d1"
              >
                <div
                  className="d2 d3 d4"
                >
                  <div
                    aria-label={null}
                    className="d5 d6 d7 d8 d9 cw"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Robert De Niro"
                      className="d5 d6 d7 d8 d9 da db dc dd"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/8Bgdfv1oN9Mw0YuMHP6fw8KzDkc.jpg"
                    />
                  </div>
                </div>
                <div
                  className="de d3 df dg"
                >
                  <div
                    className="cd ax cr bn bo"
                    data-baseweb="typo-p1"
                  >
                    Robert De Niro
                  </div>
                  <div
                    className="cv ax az cq cs"
                    data-baseweb="typo-label3"
                  >
                    Murray Franklin
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="d1 af"
            role="row"
          >
            <div
              className="ax cq cr cs fc d1 fd cg ch ci cf"
            >
              <div
                className="b5 b6 cf ch d1"
              >
                <div
                  className="d2 d3 d4"
                >
                  <div
                    aria-label={null}
                    className="d5 d6 d7 d8 d9 cw"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Zazie Beetz"
                      className="d5 d6 d7 d8 d9 da db dc dd"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/sgxzT54GnvgeMnOZgpQQx9csAdd.jpg"
                    />
                  </div>
                </div>
                <div
                  className="de d3 df dg"
                >
                  <div
                    className="cd ax cr bn bo"
                    data-baseweb="typo-p1"
                  >
                    Zazie Beetz
                  </div>
                  <div
                    className="cv ax az cq cs"
                    data-baseweb="typo-label3"
                  >
                    Sophie Dumond
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="g4 g5 d1"
    >
      <div
        aria-label="pagination"
        className="d1 af b9 ax ay az b0"
        data-baseweb="pagination"
      >
        <button
          className="ae af ag ah ai aj ak al am an ao ap aq g6 as at au av aw ax bn g7 bo b1 b2 b3 b4 bp bq br bs cv ba g8 g9 ga gb gc gd"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &lt;
        </button>
        <div
          className="dj dg ge gf"
        >
          <div
            aria-controls={null}
            aria-expanded="false"
            aria-haspopup="true"
            className="ax ay cr b0 d9 dj dh"
            data-baseweb="select"
            onClick={[Function]}
          >
            <div
              className="b3 b1 b2 b4 d9 di dh d1 gg ap fk bz gh an ao b9 gi ba gj"
              onClick={[Function]}
              onKeyDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="d9 dj de ek gk d1 af gl di gm gn fs ch"
              >
                <div
                  aria-selected="true"
                  className="b0 d9 go dn c6 di gp gq gr dj cg ci gs b8 b9 ax ay az"
                  disabled={false}
                  value={1}
                >
                  1
                </div>
                <div
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-label={null}
                  aria-labelledby={null}
                  aria-required={null}
                  className="dj cw c6 ba dy gj d9 ak au aw at av cg ci cf ch gt gu"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                />
              </div>
              <div
                className="d9 dj d1 d3 af gv b8"
              >
                <svg
                  className="cw fn b9 gt gw ap"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    open
                  </title>
                  <path
                    d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-label="page 1 of 2"
          className="gx gy ba cv"
        >
          of 2
        </span>
        <button
          className="ae af ag ah ai aj ak al am an ao ap aq g6 as at au av aw ax bn g7 bo b1 b2 b3 b4 bp bq br bs cv ba g8 g9 ga gb gc gd"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots ReviewItem Review Item 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="gz h0 b5 g5 cf ch"
    >
      <div
        className="cv ax az cq cs"
        data-baseweb="typo-label3"
      >
        Gimly
      </div>
      <p
        className="ax ay cr b0 ec ed ee ef eg"
      >
        I'm not here to explain 
        <em>
          Once Upon a Time In Hollywood
        </em>
        , just to enjoy it. 
      </p>
      <button
        className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bn az bo b1 b2 b3 b4 cg ci cf ch cv ba g8 h1 ga h2 gc h3"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        Read more
      </button>
    </div>
    <div
      className="ew h4 b5 g5 cf ch"
    >
      <div
        className="cv ax az cq cs"
        data-baseweb="typo-label3"
      >
        JPV852
      </div>
      <p
        className="ax ay cr b0 ec ed ee ef eg"
      >
        Well, the last 15-minutes were great, the first 2.5 hours on the other hand was... uneventful. I have an interest in Hollywood, more from the 1980s though, so some of the slower scenes still kept my attention, but there's no real plot and minimal character development. 
      </p>
      <button
        className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax bn az bo b1 b2 b3 b4 cg ci cf ch cv ba g8 h1 ga h2 gc h3"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        Read more
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Search Size 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ax cq cr cs b9 d1 dh"
      data-baseweb="input"
    >
      <div
        className="d9 d1 dh fk bz fl an ao b3 b4 b1 b2 ax cq cr cs b9 fm bj"
        data-baseweb="base-input"
      >
        <div
          className="d1 af b7"
        >
          <svg
            className="cw fn fo fp fq"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d9 ba ah ai ak dh c6 fr fb b5 b6 fs ft ax cq cr cs b9 fu fv"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Default"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax ay cr b0 b9 d1 dh"
      data-baseweb="input"
    >
      <div
        className="d9 d1 dh fk bz fl an ao b3 b4 b1 b2 ax ay cr b0 b9 fm bj"
        data-baseweb="base-input"
      >
        <div
          className="d1 af b7"
        >
          <svg
            className="cw fn fo fp fq"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d9 ba ah ai ak dh c6 fr fb gm gn h5 h6 ax ay cr b0 b9 fu fv"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Medium"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="ax bn cr bo b9 d1 dh"
      data-baseweb="input"
    >
      <div
        className="d9 d1 dh fk bz fl an ao b3 b4 b1 b2 ax bn cr bo b9 fm bj"
        data-baseweb="base-input"
      >
        <div
          className="d1 af b7"
        >
          <svg
            className="cw fn fo fp fq"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="d9 ba ah ai ak dh c6 fr fb bu bv h7 h8 ax bn cr bo b9 fu fv"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Large"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Tag Base 1`] = `
Array [
  <div
    className=""
  >
    <span
      aria-label="button"
      className="ax h9 az cs af ha bz ah hb hc hd he d9 ec hf ae gt gg hg hh hi hj hk hl b7 b8 ak  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="di gq gp hm"
        title="Action"
      >
        Action
      </span>
    </span>
    <span
      aria-label="button"
      className="ax h9 az cs af ha bz ah hb hc hd he d9 ec hf ae gt gg hg hh hi hj hk hl b7 b8 ak  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="di gq gp hm"
        title="Thriller"
      >
        Thriller
      </span>
    </span>
    <span
      aria-label="button"
      className="ax h9 az cs af ha bz ah hb hc hd he d9 ec hf ae gt gg hg hh hi hj hk hl b7 b8 ak  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="di gq gp hm"
        title="Drama"
      >
        Drama
      </span>
    </span>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Typography Size 1`] = `
Array [
  <div
    className=""
  >
    <h2
      className="ax bt az bo em en ce ed eo ep eq er es"
    >
      H2: Overview
    </h2>
    <h3
      className="ax bt g7 bo hn ho"
    >
      H3: Popular movies
    </h3>
    <p
      className="ax ay cr b0 ec ed ee ef eg"
    >
      P1: As the gang return to Jumanji to rescue one of their own, they discover that nothing is as they expect. The players will have to brave parts unknown and unexplored in order to escape the world’s most dangerous game.
    </p>
  </div>,
  <div
    className=""
  />,
]
`;
